--- a/app/src/main/res/layout/fragment_worker.xml
+++ b/app/src/main/res/layout/fragment_worker.xml
@@ -2,19 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <GridView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/worker_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/worker_grid_view_padding_left_right"
-        android:paddingRight="@dimen/worker_grid_view_padding_left_right"
-        android:paddingTop="@dimen/worker_grid_view_padding_top_bottom"
-        android:paddingBottom="@dimen/worker_grid_view_padding_top_bottom"
-        android:verticalSpacing="@dimen/worker_grid_view_vertical_spacing"
-        android:horizontalSpacing="@dimen/worker_grid_view_horizontal_spacing"
-        android:columnWidth="@dimen/worker_grid_view_item_width"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:gravity="center"/>
+        android:scrollbars="vertical"/>
 
 </RelativeLayout>
