--- a/app/src/main/res/layout/task_case_header.xml
+++ b/app/src/main/res/layout/task_case_header.xml
@@ -8,9 +8,7 @@
 
     <Spinner
         android:id="@+id/task_case_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@null"/>
+        style="@style/CommonSpinnerStyle"/>
 
     <View
         android:layout_width="match_parent"
