--- a/app/src/main/res/layout/task_case_header.xml
+++ b/app/src/main/res/layout/task_case_header.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/task_case_header_margin_bottom"
     android:orientation="vertical"
     android:gravity="center_horizontal">
 
@@ -11,8 +10,12 @@
         android:id="@+id/task_case_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/task_case_header_margin_bottom"
         android:background="@null"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/task_case_view_divider_height"
+        android:background="@color/main_window_background_color" />
 
     <com.bananaplan.workflowandroid.utility.ExpandableLayout
         android:id="@+id/task_case_information_expandablelayout"
@@ -20,6 +23,11 @@
         android:layout_height="wrap_content"
         app:el_headerLayout="@layout/task_case_information_header"
         app:el_contentLayout="@layout/task_case_information_content"
-        android:background="@color/task_case_header_background_color"/>
+        android:background="@drawable/common_block_background"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/task_case_view_divider_height"
+        android:background="@color/main_window_background_color" />
 
 </LinearLayout>
