--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/task_item_height"
-    android:layout_margin="@dimen/task_item_margin"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/task_item_background">
 
-    <TextView
-        android:id="@+id/task_title"
-        style="@style/TaskItemTextStyle"
-        android:textColor="@color/task_case_text_color"
-        android:textSize="@dimen/task_item_title_text_size"/>
-
     <LinearLayout
-        android:id="@+id/task_status_container"
-        style="@style/TaskItemTextStyle"
-        android:orientation="horizontal" />
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/task_item_part1_height"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/task_title"
+            style="@style/TaskItemTextStyle"
+            android:textColor="@color/task_case_text_color"
+            android:textSize="@dimen/task_item_title_text_size"/>
+
+        <LinearLayout
+            android:id="@+id/task_status_container"
+            style="@style/TaskItemTextStyle"
+            android:orientation="horizontal" />
+
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -23,70 +29,77 @@
         android:background="@color/task_item_divider_color" />
 
     <LinearLayout
-        style="@style/TaskItemTextStyle"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/task_item_part2_height"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            style="@style/TaskItemTextStyle"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/task_working_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/task_case_text_color"
-            android:textSize="@dimen/task_item_content_text_size"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/task_working_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/task_case_text_color"
+                android:textSize="@dimen/task_item_content_text_size"/>
 
-    <LinearLayout
-        style="@style/TaskItemTextStyle"
-        android:orientation="horizontal">
+        </LinearLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            style="@style/TaskItemTextStyle"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/task_tool"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/task_case_text_color"
-            android:textSize="@dimen/task_item_content_text_size"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/task_tool"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/task_case_text_color"
+                android:textSize="@dimen/task_item_content_text_size"/>
 
-    <LinearLayout
-        style="@style/TaskItemTextStyle"
-        android:orientation="horizontal">
+        </LinearLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            style="@style/TaskItemTextStyle"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/task_worker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/task_case_text_color"
-            android:textSize="@dimen/task_item_content_text_size"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/task_worker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/task_case_text_color"
+                android:textSize="@dimen/task_item_content_text_size"/>
 
-    <LinearLayout
-        style="@style/TaskItemTextStyle"
-        android:orientation="horizontal">
+        </LinearLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            style="@style/TaskItemTextStyle"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/task_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/task_case_text_color"
-            android:textSize="@dimen/task_item_content_text_size"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/task_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/task_case_text_color"
+                android:textSize="@dimen/task_item_content_text_size"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
