--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,7 @@
     <dimen name="drawer_menu_container_width">240dp</dimen>
 
     <!-- AssignTaskFragment: Tasks part -->
-    <dimen name="task_case_view_padding_left_right">10dp</dimen>
-    <dimen name="task_case_header_margin_bottom">10dp</dimen>
+    <dimen name="task_case_view_divider_height">5dp</dimen>
     <dimen name="task_case_spinner_padding">15dp</dimen>
     <dimen name="task_case_spinner_item_text_size">18dp</dimen>
     <dimen name="task_case_information_height">120dp</dimen>
@@ -16,8 +15,10 @@
     <dimen name="task_case_information_participated_employee_label_margin_top">10dp</dimen>
     <dimen name="task_case_edit_button_padding">15dp</dimen>
     <dimen name="task_case_edit_button_text_size">20dp</dimen>
-    <dimen name="task_item_height">200dp</dimen>
-    <dimen name="task_item_margin">10dp</dimen>
+    <dimen name="task_item_part1_height">70dp</dimen>
+    <dimen name="task_item_part2_height">140dp</dimen>
+    <dimen name="task_item_normal_margin">5dp</dimen>
+    <dimen name="task_item_boundary_margin">23dp</dimen>
     <dimen name="task_item_padding">10dp</dimen>
     <dimen name="task_item_corner_radius">5dp</dimen>
     <dimen name="task_item_status_corner_radius">8dp</dimen>
