--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="colorPrimaryDark">@color/action_bar_primary_dark_color</item>
 
         <item name="drawerArrowStyle">@style/BaseAppTheme.DrawerArrowStyle</item>
-        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowBackground">@color/main_window_background_color</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
