--- a/app/src/main/res/layout/fragment_case_overview.xml
+++ b/app/src/main/res/layout/fragment_case_overview.xml
@@ -58,9 +58,9 @@
         android:layout_toRightOf="@id/case_pane_vertical_divider">
 
         <ScrollView
+            android:id="@+id/case_right_pane_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fillViewport="true">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -85,6 +85,7 @@
                         android:paddingBottom="8dp"
                         android:text="@string/case_overview_edit_case"
                         android:background="@drawable/border_textview_edit_case_bg"
+                        android:textColor="#ffffff"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentRight="true"/>
 
@@ -242,6 +243,12 @@
                     </LinearLayout>
 
                 </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"
+                    android:background="#f5f5f5"
+                    android:layout_marginTop="24dp"/>
 
                 <LinearLayout
                     android:id="@+id/statistics_choose_vg"
