--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/task_progress"
+                android:id="@+id/task_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/task_case_text_color"
