--- a/app/src/main/res/drawable/case_progress_drawable.xml
+++ b/app/src/main/res/drawable/case_progress_drawable.xml
@@ -2,25 +2,16 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <corners android:radius="5dip" />
-            <gradient
-                android:startColor="#979797"
-                android:centerColor="#979797"
-                android:centerY="0.75"
-                android:endColor="#979797"
-                android:angle="270"
-                />
+            <corners android:radius="8dp" />
+            <stroke android:width="1dp" android:color="#979797"/>
+            <solid android:color="#d8d8d8"/>
         </shape>
     </item>
     <item android:id="@android:id/progress" >
         <clip>
             <shape>
-                <corners
-                    android:radius="5dip" />
-                <gradient
-                    android:startColor="#428bca"
-                    android:endColor="#428bca"
-                    android:angle="270" />
+                <corners android:radius="8dp"/>
+                <solid android:color="#428bca"/>
             </shape>
         </clip>
     </item>
