--- a/app/src/main/res/layout/case_spinner_view.xml
+++ b/app/src/main/res/layout/case_spinner_view.xml
@@ -5,12 +5,12 @@
 
     <ImageView
         android:id="@+id/case_spinner_view_iv1"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="20dp"
+        android:layout_height="19dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"
         android:layout_centerVertical="true"
-        android:src="@android:drawable/ic_menu_call"/>
+        android:src="@drawable/ic_work_black"/>
 
     <ImageView
         android:id="@+id/case_spinner_view_iv2"
@@ -18,7 +18,7 @@
         android:layout_height="15.3dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@android:drawable/ic_dialog_email"/>
+        android:src="@drawable/black_arrow_down"/>
 
     <TextView
         android:id="@+id/case_spinner_view_tv_vendor_name"
