--- a/app/src/main/res/layout/worker_overview_worker_listview.xml
+++ b/app/src/main/res/layout/worker_overview_worker_listview.xml
@@ -2,45 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="9dp"
+    android:paddingLeft="8dp"
     android:minHeight="@dimen/overview_listview_item_height"
-    android:id="@+id/case_listview_root">
+    android:id="@+id/worker_ov_worker_listview_root">
 
-    <TextView
-        android:layout_width="49dp"
+    <ImageView
+        android:layout_width="36dp"
         android:layout_height="36dp"
-        android:textSize="16sp"
-        android:textColor="#ffffff"
-        android:gravity="center"
-        android:padding="9dp"
         android:layout_marginRight="12dp"
         android:layout_centerVertical="true"
-        android:id="@+id/case_listview_view_tv_status" />
+        android:src="@drawable/ic_person_black"
+        android:background="@drawable/border_avatar"
+        android:id="@+id/worker_ov_worker_listview_worker_avatar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
-        android:layout_toRightOf="@id/case_listview_view_tv_status">
+        android:layout_toRightOf="@id/worker_ov_worker_listview_worker_avatar">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/listview_taskcase_taskname_textcolor_unfinished"
+            android:textColor="#4a4a4a"
             android:textSize="16sp"
             android:singleLine="true"
-            android:id="@+id/case_listview_view_tv_case_name" />
+            android:id="@+id/worker_ov_worker_listview_worker_name" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/overview_listview_second_item_textcolor"
+            android:textColor="#9b9b9b"
             android:textSize="14sp"
-            android:layout_below="@id/case_listview_view_tv_case_name"
+            android:layout_below="@id/worker_ov_worker_listview_worker_name"
             android:layout_marginTop="7dp"
             android:singleLine="true"
-            android:id="@+id/case_listview_view_tv_vendor_name"/>
+            android:id="@+id/worker_ov_worker_listview_worker_title"/>
 
     </RelativeLayout>
 </RelativeLayout>
