--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,15 +38,16 @@
     <!-- CaseOverviewFragment -->
     <color name="listview_taskcase_taskname_textcolor_finished">#9b9b9b</color>
     <color name="listview_taskcase_taskname_textcolor_unfinished">#4a4a4a</color>
-    <color name="listview_taskcase_selected_bg">#428bca</color>
+    <color name="listview_selected_bg">#428bca</color>
     <color name="listview_taskitem_row_odd">#f7f7f7</color>
     <color name="listview_taskitem_row_even">#ffffff</color>
     <color name="taskitem_status_working">#5cb85c</color>
     <color name="taskitem_status_finish">#9b9b9b</color>
     <color name="taskitem_status_others">#303030</color>
-    <color name="case_overview_taskcase_listview_vendor_textcolor">#9b9b9b</color>
     <color name="case_overview_statistics_bar_color">#428bca</color>
     <color name="case_overview_statistics_grid_color">#e1e1e1</color>
     <color name="case_overview_statistics_axis_color">#9b9b9b</color>
+    <color name="overview_listview_first_item_textcolor">#4a4a4a</color>
+    <color name="overview_listview_second_item_textcolor">#9b9b9b</color>
 
 </resources>
