--- a/app/src/main/res/layout/fragment_drawer_menu.xml
+++ b/app/src/main/res/layout/fragment_drawer_menu.xml
@@ -2,9 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is DrawerMenuFragment"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/drawer_menu_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/drawer_background_color"/>
 
 </RelativeLayout>
