--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,5 @@
 <resources>
 
-    <!-- Main -->
-    <dimen name="drawer_menu_container_width">240dp</dimen>
-
     <!-- AssignTaskFragment: Tasks part -->
     <dimen name="assign_task_divider_height">5dp</dimen>
     <dimen name="task_case_spinner_padding">15dp</dimen>
@@ -73,5 +70,21 @@
     <dimen name="case_overview_statistics_x_axis_padding">8dp</dimen>
     <dimen name="overview_listview_item_height">56dp</dimen>
     <dimen name="ov_taskitem_listview_item_height">50dp</dimen>
+
+    <!-- DrawerMenu fragment -->
+    <dimen name="drawer_width">300dp</dimen>
+    <dimen name="drawer_divider_height">1dp</dimen>
+    <dimen name="drawer_item_height">65dp</dimen>
+    <dimen name="drawer_item_padding_left_right">15dp</dimen>
+    <dimen name="drawer_item_text_size">20dp</dimen>
+    <dimen name="drawer_item_text_margin_left">20dp</dimen>
+    <dimen name="drawer_item_setting_height">130dp</dimen>
+    <dimen name="drawer_item_setting_text_size">20dp</dimen>
+    <dimen name="drawer_item_setting_padding">15dp</dimen>
+    <dimen name="drawer_item_number_corner_radius">5dp</dimen>
+    <dimen name="drawer_item_number_padding_left_right">10dp</dimen>
+    <dimen name="drawer_item_number_padding_top_bottom">6dp</dimen>
+    <dimen name="drawer_subitem_height">50dp</dimen>
+    <dimen name="drawer_subitem_text_size">15dp</dimen>
 
 </resources>
